--- a/dockerfiles/Dockerfile.goflow
+++ b/dockerfiles/Dockerfile.goflow
@@ -7,6 +7,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY cmd/goflow ./cmd/goflow
+COPY goflow.go options.go ./
 COPY pkg ./pkg
 
 RUN go build -o goflow ./cmd/goflow
