Move broker to root

--- a/dockerfiles/Dockerfile.workerpool
+++ b/dockerfiles/Dockerfile.workerpool
@@ -16,6 +16,7 @@ RUN go mod download
 COPY cmd/workerpool ./cmd/workerpool
 COPY goflow.go options.go ./
 COPY workerpool ./workerpool
+COPY broker ./broker
 COPY pkg ./pkg
 
 RUN go build -o workerpool ./cmd/workerpool
