--- a/dockerfiles/Dockerfile.goflow
+++ b/dockerfiles/Dockerfile.goflow
@@ -9,6 +9,7 @@ RUN go mod download
 COPY cmd/goflow ./cmd/goflow
 COPY goflow.go options.go ./
 COPY workerpool ./workerpool
+COPY broker ./broker
 COPY pkg ./pkg
 
 RUN go build -o goflow ./cmd/goflow
