Move task to root

--- a/dockerfiles/Dockerfile.goflow
+++ b/dockerfiles/Dockerfile.goflow
@@ -10,6 +10,7 @@ COPY cmd/goflow ./cmd/goflow
 COPY goflow.go options.go ./
 COPY workerpool ./workerpool
 COPY broker ./broker
+COPY task ./task
 COPY pkg ./pkg
 
 RUN go build -o goflow ./cmd/goflow
