--- a/dockerfiles/Dockerfile.workerpool
+++ b/dockerfiles/Dockerfile.workerpool
@@ -17,6 +17,7 @@ COPY cmd/workerpool ./cmd/workerpool
 COPY goflow.go options.go ./
 COPY workerpool ./workerpool
 COPY broker ./broker
+COPY task ./task
 COPY pkg ./pkg
 
 RUN go build -o workerpool ./cmd/workerpool
