--- a/dockerfiles/Dockerfile.pluginbuilder
+++ b/dockerfiles/Dockerfile.pluginbuilder
@@ -13,7 +13,7 @@ RUN apt-get update \
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY pkg ./pkg
+COPY task ./task
 
 COPY dockerfiles/pluginbuilder-entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
