Load config before every command and inject it to `run` package.
Use static load balancer IP and pass it in via config

--- a/.goflow.yaml
+++ b/.goflow.yaml
@@ -1,7 +1,7 @@
 goflow_server:
   image: "goflow-server:latest"
   replicas: 1
-  port: 30000
+  address: "127.0.0.1:50051"
 workerpool:
   image: "workerpool"
   replicas: 5
@@ -12,4 +12,4 @@ redis:
   replicas: 1
 kubernetes:
   namespace: "goflow"
-  clusterUrl: "https://127.0.0.1:32771"
+  clusterUrl: "https://127.0.0.1:55203"
