Feature/kubernetes integration (#8)
* Change goflow docker image to goflow-server

* working on k8s

* remove goflow conf from gitignore

* Add serialise package. Fix bug in redis_broker where the serialiser was not being set

* Remove logs in pluginbuilder entrypoint

* Fix bug in workerpool where serialiser and deserialiser was set in the wrong order

* Update protos

* Load config before every command and inject it to `run` package.

Use static load balancer IP and pass it in via config

* Correctly use replicas for workerpools

* Remove docker deployment from CLI tool

* Add kubernetes destroy. Start working on logging

* Tidy up logging in kubernetes deployment in CLI

* Remove unused variables

* Add functional options pattern to kubernetes client

* Fix typo in options

* Add testify mock to log package

* Add kube client constructor unit tests

* Add slice contains function

* Use Apply instead of create/update for deployments

* keep working on kube client

* decided on abstraction finally

* Tidy up kubernetes deployment

* de-dupe resource package

* Start unit testing resource package

* Add unit tests for resource constructors

* add nolint comments for duplication in resource_test

* Add unit tests for speccer

* Add clean command to makefile, and go mod tidy before building

* Add destroy command to cli

* Remove old plugin builder config

* Fix some linter errors

* Fix bug where task handlers not being passed correctly in GoFlow local mode

* FIx minor linter errors

* Add size threshold to gocritic hugeParam

Previously it is probitively small (80 bytes) for use with kubernetes XOptions structs

* Remove dupl linter from tests

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -11,6 +11,9 @@ linters-settings:
       - opinionated
       - performance
       - style
+    settings:
+      hugeParam:
+        sizeThreshold: 512
   govet:
     enable:
       # - fieldalignment
@@ -38,7 +41,6 @@ linters:
     - ineffassign
     - misspell
     - mnd
-    - nolintlint
     - nakedret
     - prealloc
     - predeclared
@@ -55,11 +57,12 @@ linters:
     - wsl
 issues:
   exclude-dirs:
-  - "example"
+    - "example"
   exclude-rules:
     - path: (.+)_test.go
       linters:
         - goconst
+        - dupl
 
 run:
   issues-exit-code: 1
