Disable gocritic to speed up linter

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -31,7 +31,7 @@ linters:
     - dogsled
     - errcheck
     - goconst
-    - gocritic
+    # - gocritic
     - gofmt
     - goimports
     - gocyclo
