Remove sarif step from github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
       - uses: actions/setup-go@v4
       - name: Lint
         uses: golangci/golangci-lint-action@v6.1.1
-        with: 
-          args: --out-format sarif:golangci-lint.sarif,colored-line-number:stdout
-      - uses: actions/upload-artifact@master
-        with:
-          name: lint-report
-          path: golangci-lint.sarif
+      #   with:
+      #     args: --out-format sarif:golangci-lint.sarif,colored-line-number:stdout
+      # - uses: actions/upload-artifact@master
+      #   with:
+      #     name: lint-report
+      #     path: golangci-lint.sarif
 
-  snyk: 
+  snyk:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,34 +37,34 @@ jobs:
         uses: snyk/actions/golang@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --sarif-file-output=snyk.sarif
-      - uses: actions/upload-artifact@master
-        with:
-          name: snyk-report
-          path: snyk.sarif
+      #   with:
+      #     args: --sarif-file-output=snyk.sarif
+      # - uses: actions/upload-artifact@master
+      #   with:
+      #     name: snyk-report
+      #     path: snyk.sarif
 
-  sarif:
-    if: always()
-    needs: [lint, snyk]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: lint-report
-          path: golangci-lint.sarif
-      - uses: actions/download-artifact@master
-        with:
-          name: snyk-report
-          path: snyk.sarif
-      - name: Upload Lint Report
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: golangci-lint.sarif
-      - name: Upload Snyk Report
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: snyk.sarif
+  # sarif:
+  #   if: always()
+  #   needs: [lint, snyk]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: lint-report
+  #         path: golangci-lint.sarif
+  #     - uses: actions/download-artifact@master
+  #       with:
+  #         name: snyk-report
+  #         path: snyk.sarif
+  #     - name: Upload Lint Report
+  #       uses: github/codeql-action/upload-sarif@v3
+  #       with:
+  #         sarif_file: golangci-lint.sarif
+  #     - name: Upload Snyk Report
+  #       uses: github/codeql-action/upload-sarif@v3
+  #       with:
+  #         sarif_file: snyk.sarif
 
   report-card:
     runs-on: ubuntu-latest
@@ -72,15 +72,15 @@ jobs:
       - name: Refresh Report Card
         uses: creekorful/goreportcard-action@v1.0
 
-  test: 
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
-     
+
       - name: Test
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
-     
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
