Move grpc to separate package

--- a/dockerfiles/Dockerfile.goflow
+++ b/dockerfiles/Dockerfile.goflow
@@ -11,6 +11,7 @@ COPY goflow.go options.go ./
 COPY workerpool ./workerpool
 COPY broker ./broker
 COPY task ./task
+COPY grpc ./grpc
 COPY pkg ./pkg
 
 RUN go build -o goflow ./cmd/goflow
