--- a/.goflow.yaml
+++ b/.goflow.yaml
@@ -3,10 +3,10 @@ goflow_server:
   replicas: 1
   address: "127.0.0.1"
 workerpool:
-  image: "workerpool"
+  image: "goflow-workerpool:latest"
   replicas: 5
   path_to_handlers: "/home/docker/handlers"
-  plugin_builder_image: "plugin-builder"
+  plugin_builder_image: "goflow-plugin-builder:latest"
 redis:
   image: "redis:latest"
   replicas: 1
